Added the registry pattern to get the validator. Corrected some typos.